--- a/war/style.css
+++ b/war/style.css
@@ -10,11 +10,19 @@ body,html {
 	height: 100%;
 }
 
+.header {
+	width: 1025px;
+	padding-top: 10px;
+	padding-left: 50px;
+	color: #7597ce;
+}
+
 .wrapper {
 	width: 800px;
 	padding-top: 10px;
 	padding-left: 50px;
 	min-height: 100%;
+	padding-bottom: 10px;
 }
 
 a {
