--- a/war/style.css
+++ b/war/style.css
@@ -11,9 +11,8 @@ body,html {
 }
 
 .header {
-	width: 1025px;
 	padding-top: 10px;
-	padding-left: 50px;
+	padding-left: 25px;
 	color: #7597ce;
 }
 
@@ -21,7 +20,7 @@ body,html {
 	width: 800px;
 	padding-top: 10px;
 	padding-left: 50px;
-	min-height: 100%;
+	min-height: 59%;
 	padding-bottom: 10px;
 }
 
@@ -30,7 +29,6 @@ a {
 	text-decoration: none;
 	padding: 1px 2px;
 	background: #ffffff;
-	border-bottom: 1px dotted #ccc;
 }
 
 h1 {
@@ -56,7 +54,7 @@ h2 {
 	line-height: 150%;
 	color: #666;
 	float: bottom;
-	margin-left: 800px;
+	margin-left: 575px;
 	padding-left: 25px;
 	border-top: 1px solid #999;
 	width: 200px;
@@ -68,10 +66,25 @@ h2 {
 	float: right;
 }
 
+.controlpanel {
+	position: fixed;
+	top: 10px;
+	right: 20px;
+	text-align: right;	
+}
+
+.authors {
+	position: fixed;
+	bottom: 10px;
+	right: 20px;
+	text-align: right;
+}
+
+
 .footer {
 	bottom: 0;
 	height: 40px;
-	text-align: center;
+	padding-left: 50px;
 }
 
 .line {
